Conexão da página de reservas à API

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="og:title" content="Little Lemon" />
   <meta name="og:image" content="" />
 
+  <!-- Scripts -->
+  <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
+
   <!-- Fontes do Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
